cargo run should not auto run bin/simple-tftpd in a library package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ keywords = [
 exclude = [".github", "rfcs"]
 repository = "https://github.com/oblique/async-tftp-rs"
 
+autobins=false
+
 [dependencies]
 thiserror = "1.0.22"
 bytes = "1.0.0"
